bouncer/dev/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: bouncer
  labels:
    name: bouncer
